Don't use memset to initialize members in FileMapInfo and fix memory leak

XMLWordPrintable

    • b16

        FileMapInfo uses memset in its constructor to initialize data member, it is generally a bad idea. It can break things badly if adds a new member with a non-trivial constructor and memset is not suitable.

        Besides, it leaks malloc'd _header member.
         

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: