8283469: Don't use memset to initialize members in FileMapInfo and fix memory leak

Reviewed-by: mdoerr
Backport-of: d6fa8b004bcd0a2fc1015055d0177428889b4c31